# rdfm

./: .buildinfo  .ci.yml  .dockerignore  .gitignore  .mypy.ini  CONTRIBUTING.md  Makefile  README.md  api.html  auth_token.json  capabilities.toml  client.py  communication.py  devices.db  genindex.html  go.mod  go.sum  http-routingtable.html  index.html  introduction.html  main.go  main_test.go  objects.inv  proxy.py  rdfm_android_device_client.html  rdfm_artifact.html  rdfm_frontend.html  rdfm_linux_device_client.html  rdfm_manager.html  rdfm_mcumgr_device_client.html  rdfm_mgmt_server.html  rdfm_ota_manual.html  rdfm_schema_generator.d  rdm.md  requirements.txt  searchindex.js  server.py  server_operation.html  system_overview.html
common/communication/: .gitignore  README.md  pyproject.toml  scripts.py
common/communication/src/: rdfm_mgmt_communication.py  request_models.py
common/communication/src/rdfm/: permissions.py  ws.py
common/communication/src/rdfm/schema/: validators.py
common/communication/src/rdfm/schema/v1/: devices.py  error.py  groups.py  logs.py  packages.py  permission.py  pubsub.py  (+1 more)
documentation/: Makefile  README.md  pyproject.toml  requirements.txt
documentation/source/: api.rst  conf.py  index.md  introduction.md  rdfm_android_device_client.md  rdfm_artifact.md  rdfm_frontend.md  rdfm_linux_device_client.md  rdfm_manager.md  rdfm_mcumgr_device_client.md  rdfm_mgmt_server.md  server_operation.md  system_overview.md  system_overview.rst  usage_guidelines.md
manager/: README.md  pyproject.toml  scripts.py
manager/src/: rdfm_mgmt_client.py  rdfm_mgmt_communication.pyi  request_models.pyi
manager/src/rdfm/: config.py  helpers.py  manager.py  reverse_shell.py
manager/src/rdfm/api/: __init__.py  auth.py  devices.py  groups.py  packages.py  permissions.py
manager/src/rdfm/commands/: devices.py  groups.py  packages.py  permissions.py
server/: .ci.yml  README.md  mypy.ini  pyproject.toml  scripts.py
server/alembic/: README.md  env.py
server/alembic/versions/: 1_initial_commit.py  2_multiple_groups_per_device.py  3_add_logs_table.py  4_add_permissions.py  5_add_tags.py  6_add_action_logs.py  7_add_device_updates.py  8_add_named_permissions.py  9_action_log_url.py
server/deploy/: Dockerfile  alembic.ini  docker-compose.development.yml  docker-compose.full.env  docker-compose.full.yml  docker-compose.https.development.yml  docker-compose.keycloak.development.yml  docker-compose.minio.development.yml  docker-compose.minio.yml  docker-compose.production.yml  docker-entrypoint.sh  gunicorn.conf.py  nginx.conf  rdfm-realm-template.json  test-rdfm-keycloak-realm.json  test-rdfm-mgmt-config.json
server/deploy/pubsub-demo/: .dockerignore  .gitignore  Dockerfile  Dockerfile.demo-client-stress  README.md  docker-compose.kafka.yml  docker-compose.rdfm.yml  kafka-broker-introspection-test-authz-config.json  kafka-broker-introspection.json  rdfm-management-server-cluster-admin.json  rdfm-mgmt-config.json  secrets.env  server.properties  test-client.json
server/deploy/pubsub-demo/rdfm-jwt-auth/: README.md  pom.xml
server/deploy/pubsub-demo/scripts/: README.md  key4service.sh  storegen.sh
server/deploy/pubsub-demo/scripts/client/: README.md  oauth_consume.py  oauth_produce.py  provider.py  pyproject.toml
server/deploy/pubsub-demo/tests/: server.properties  test_kafka.def
server/src/: configuration.py  file_transfer.py  proxy.py  rdfm_mgmt_communication.pyi  rdfm_mgmt_server.py  request_models.pyi  server.py
server/src/api/static/: __init__.py  frontend.py
server/src/api/v1/: __init__.py  auth.py  common.py  devices.py  groups.py  logs.py  middleware.py  packages.py  permissions.py  pubsub.py  schemas.py  update.py
server/src/api/v1/ws/: device.py
server/src/api/v2/: __init__.py  devices.py  groups.py
server/src/auth/: device.py  token.py
server/src/database/: action_logs.py  db.py  device_updates.py  devices.py  groups.py  logs.py  packages.py  permissions.py  registrations.py
server/src/device_mgmt/: action.py  containers.py  fs.py  helpers.py  loop.py  pubsub.py  pubsub_acl.py  shell.py
server/src/device_mgmt/models/: action_execution.py  filesystem_operation.py  remote_device.py  reverse_shell.py
server/src/models/: action_log.py  base.py  device.py  device_update.py  group.py  log.py  models.py  package.py  permission.py  registration.py
server/src/storage/: __init__.py  common.py  local.py  s3.py
server/src/update/: policy.py  resolver.py
server/src/update/policies/: base.py  exact_match.py  no_update.py
server/tests/: certgen.sh  common.py  conftest.py  etc_rdfm.conf  test-actions.py  test-alembic-migrations.py  test-arguments.py  test-crash-client-input.py  test-file-download.py  test-file-transfer.py  test-groups.py  test-list-devices.py  test-manager.py  test-metadata.py  test-package-upload-auth.py  test-packages.py  test-proxy.py  test-pubsub-acl-handling.py  test-pubsub-acl-side-effects.py  test-server-auth.py  test-server-logs.py  test-server-management-auth.py  test-server-route-correctness.py  test-server-s3-storage.py  test-server-side-events.py  test-server-ws.py  test-stress.py  test-update-checker.py  test-update-policies.py  test-update-resolver.py  test-user-permissions.py  testdata.json
server/tests/docker/: Dockerfile_device  Dockerfile_server  Dockerfile_user  docker-compose.yml  test-docker-connect.py
server/tests/mocks/: device.py  oauth2_token_introspection.py
server/tests/scripts/: device-websocket-loop.py  parse_stress_logs.py  send-device-auth.py
tools/rdfm-lint-scripts/: .gitignore  README.md  pyproject.toml
tools/rdfm-lint-scripts/src/rdfm_lint_scripts/: __main__.py  mypy.ini
tools/rdfm-plotter/: .gitignore  Makefile  README.md  example_consumer_config.json  example_keycloak_config.json  pyproject.toml
tools/rdfm-plotter/src/rdfm_plotter/: __main__.py  arguments.py  config.py  keycloak_token_provider.py  log_pb2.py  main.py  rdfm_consumer.py  utils.py
tools/rdfm-plotter/tests/: README.md  conftest.py  server.properties  test-plotter.py  test-rdfm-jwt-auth.py  test_kafka.def
(+375 files in other folders)
