[tool.poetry]
name = "rdfm-mgmt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "rdfm/**/*.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
jsonschema = "^4.17.3"
rdfm_mgmt_communication = {path = "../common/communication"}
pydantic = "^2.0.3"
requests = "^2.31.0"
types-requests = "^2.31.0.2"
requests-toolbelt = "^1.0.0"
progressbar2 = "^4.2.0"
marshmallow = "^3.20.1"
marshmallow-dataclass = "^8.5.14"
authlib = "==1.2.1"
python-dateutil = "^2.8.2"
simple-websocket = "^1.0.0"

[tool.poetry.group.test.dependencies]
mypy = "^1.4.0"
types-jsonschema = "^4.17.0.8"
pycodestyle = "^2.10.0"


[tool.poetry.group.types.dependencies]
types-urllib3 = "^1.26.25.13"
[tool.poetry.scripts]
rdfm-mgmt = 'rdfm.manager:main'
test-pycodestyle = 'scripts:pycodestyle_checks'
test-mypy = 'scripts:mypy_checks'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
