[tool.poetry]
name = "rdfm-mgmt-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "**/*.py", from = "src/" },
]

[tool.poetry.dependencies]
python = "^3.11"
jsonschema = "^4.17.3"
rdfm_mgmt_communication = {path = "../common/communication"}
pydantic = "^2.0.3"
flask = "^2.3.2"
types-jwt = "^0.1.3"
pyjwt = "^2.8.0"
sqlalchemy = "^2.0.19"
types-flask = "^1.1.6"
types-pyjwt = "^1.7.1"
pytest = "^7.4.0"
pexpect = "^4.8.0"
requests = "^2.31.0"
marshmallow = "^3.20.1"
networkx = "^3.1"
pycryptodome = "^3.18.0"
boto3 = "^1.28.57"
moto = "^4.2.4"
authlib = "==1.2.1"
simple-websocket = "^1.0.0"

[tool.poetry.group.test.dependencies]
mypy = "^1.4.0"
types-jsonschema = "^4.17.0.8"
pycodestyle = "^2.10.0"

[tool.poetry.group.types.dependencies]
types-flask = "^1.1.6"
[tool.poetry.scripts]
test = 'scripts:static_checks'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = [
    "pydantic.mypy"
]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
