[tool.poetry]
name = "rdfm_mgmt_communication"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "rdfm_mgmt_communication.py", from = "src" },
    { include = "request_models.py", from = "src" },
    { include = "rdfm/**/*.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
marshmallow = "^3.20.1"
marshmallow-dataclass = "^8.5.14"

[tool.poetry.group.test.dependencies]
types-jsonschema = "^4.17.0.8"

[tool.poetry.scripts]
test = 'scripts:static_checks'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
