[project]
name = "rdfm_mgmt_communication"
version = "0.1.0"
description = ""
authors = [
    { name = "Antmicro Ltd.", email = "contact@antmicro.com" }
]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11, <4.0"
dependencies = [
    "marshmallow (>=3.20.1,<4.0.0)",
    "marshmallow-dataclass (>=8.5.14,<9.0.0)",
]

[project.scripts]
test = 'scripts:static_checks'

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
    { include = "rdfm_mgmt_communication.py", from = "src" },
    { include = "request_models.py", from = "src" },
    { include = "rdfm/**/*.py", from = "src" },
]

[tool.poetry.group.test.dependencies]
types-jsonschema = "^4.17.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
